; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_unlock.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_lock = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket_lock*)* @socket_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socket_unlock(%struct.socket_lock* %0) #0 {
  %2 = alloca %struct.socket_lock*, align 8
  store %struct.socket_lock* %0, %struct.socket_lock** %2, align 8
  %3 = load %struct.socket_lock*, %struct.socket_lock** %2, align 8
  %4 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = add nsw i64 %5, -1
  store i64 %6, i64* %4, align 8
  %7 = load %struct.socket_lock*, %struct.socket_lock** %2, align 8
  %8 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sle i64 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %1
  %12 = load %struct.socket_lock*, %struct.socket_lock** %2, align 8
  %13 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp eq i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load %struct.socket_lock*, %struct.socket_lock** %2, align 8
  %19 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @spinlock_unlock(i32 %20)
  br label %22

22:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @spinlock_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
